--- a/projeto-react-2/src/components/Conversao2.css
+++ b/projeto-react-2/src/components/Conversao2.css
@@ -1,3 +1,6 @@
 .container-conversao2{
     background-color: rgb(169, 238, 167);
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 10px;
 }
