--- a/projeto-react-2/src/components/Conversao.css
+++ b/projeto-react-2/src/components/Conversao.css
@@ -1,3 +1,6 @@
 .container-conversao{
     background-color: rgb(238, 167, 232);
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 10px;
 }
