--- a/aula-css/style.css
+++ b/aula-css/style.css
@@ -6,6 +6,9 @@ body{
     height: 100%;
     margin: 0;
     background-color: bisque;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 #container{
@@ -23,13 +26,15 @@ body{
         #esquerda-um{
             height: 15%;
             width: 100%;
-            background-color: blanchedalmond;
+            background-color: rgb(255, 255, 255);
         }
 
         #esquerda-dois{
             height: 15%;
             width: 100%;
-            background-color: rgb(205, 255, 247);
+            font-weight: bold;
+            font-size: 60px;
+            background-color: rgb(255, 255, 255);
             display: flex;
             justify-content: center;
             align-items: center;            
@@ -38,7 +43,7 @@ body{
         #esquerda-tres{
             height: 20%;
             width: 100%;
-            background-color: rgb(224, 205, 255);
+            background-color: rgb(255, 255, 255);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -47,17 +52,52 @@ body{
         #esquerda-quatro{
             height: 40%;
             width: 100%;
-            background-color: rgb(255, 205, 212);
+            background-color: rgb(255, 255, 255);
+            font-size: 20px;
             display: flex;
             justify-content: center;
             flex-direction: column;
-            align-items: center;              
+            align-items: center;
+            justify-content: space-between;              
         }
+
+            #input-email{
+                border-style: none;
+                background-color: #ededed;
+                width: 500px;
+                font-size: 20px;
+                height: 45px;
+                padding: 15px;
+            }
+
+            #input-senha{
+                border-style: none;
+                background-color: #ededed;
+                width: 500px;
+                font-size: 20px;
+                height: 45px;
+                padding: 15px;
+            }
+
+            #botao-esquerdo{
+                font-family: "Montserrat", sans-serif;
+                font-optical-sizing: auto;
+                font-style: normal;
+                font-size: 17px;
+                border-style: none;
+                border-radius: 50px;
+                background-color: #f1673d;
+                color: #ffffff;
+                font-weight: bold;
+                padding: 10px;
+                height: 55px;
+                width: 200px;
+            }
 
         #esquerda-cinco{
             height: 10%;
             width: 100%;
-            background-color: rgb(205, 255, 213);
+            background-color: rgb(255, 255, 255);
         }
 
     #direita{
