--- a/projeto-react-mesada/mesada/src/App.css
+++ b/projeto-react-mesada/mesada/src/App.css
@@ -54,6 +54,7 @@ body{
 
 .input1{
   background-color: #d3f0ff;
+  border-color: #f190be;
   height: 25px;
   border-radius: 5px;
   margin: 5px;
@@ -61,6 +62,7 @@ body{
 
 .input2{
   background-color: #d3f0ff;
+  border-color: #f190be;
   height: 25px;
   border-radius: 5px;
   margin: 5px;
