--- a/projeto-react-mesada/mesada/src/App.css
+++ b/projeto-react-mesada/mesada/src/App.css
@@ -6,19 +6,19 @@ body{
 }
 
 .container{
+  width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  margin: 880px;
   text-align: center;
   background-color: #E4C1F9;
-  padding: 100px;
+  padding: 80px;
   border-radius: 20px;
   border-style: solid;
   border-color: #FF99C8;
