--- a/projeto-react-mesada/mesada/src/App.css
+++ b/projeto-react-mesada/mesada/src/App.css
@@ -6,7 +6,7 @@ body{
 }
 
 .container{
-  width: 600px;
+  width: 650px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,6 +28,7 @@ body{
 .titulo {
   font-size: 90px;
   color: #FCF6BD;
+  font-weight: 600;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #FF99C8;
 }
@@ -42,6 +43,7 @@ body{
 .sub-tit{
   color: #FCF6BD;
   font-size: 40px;
+  font-weight: 500;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #FF99C8;
 }
